--- a/detail.html
+++ b/detail.html
@@ -14,7 +14,7 @@
 			<section id="header">
 				<div class="inner">
 					<span class="icon solid major fa-code"></span>
-					<h1>Wanna be best <strong>Programmer</strong>
+					<h1>Who is <strong>Wonseok Choi</strong>
 					</h1>
 					<p>Welcome this is <strong>Wonseok</strong>`s profolio </p>
 					<ul class="actions special">
@@ -40,7 +40,7 @@
 							경력사항: 신입(교내 프로젝트외 활동 없음)<br>
 							</p>
 							<ul class="actions special">
-								<li><a href="detail.html" class="button">More about me</a></li>
+								<li><a href="#" class="button">More about me</a></li>
 							</ul>
 						</div>
 						
