--- a/detail.html
+++ b/detail.html
@@ -6,6 +6,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/fontawesome-all.min.css">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
@@ -101,6 +102,9 @@
 				<ul class="copyright">
 					<li>&copy; Choi Wonseok</li></li>
 				</ul>
+				<div>
+				<button onclick="moveToTop()" class="btn-moveTop"><i class="icon solid fa-arrow-up fa-xl" style="color: #1f3b51;"></i></button>
+				</div>
 			</section>
 
 		<!-- Scripts -->
