--- a/index.html
+++ b/index.html
@@ -71,8 +71,9 @@
 							<li><img src="images/java.png" style = "width: 8em; height: 8em;"></li>
 							<li><img src="images/nodejs.png" style = "width: 8em; height: 8em;"></li>
 							<li><img src="images/C.png" style = "width: 8em; height: 8em;"></li>
-							<li><img src="images/mysql.jpg" style = "width: 8em; height: 8em;"></li>
-					
+							<!-- <li><img src="images/mysql.jpg" style = "width: 8em; height: 8em;"></li> -->
+						</ul>
+						<ul class="major-icons">
 							<li><img src="images/html_css_js.png" style = "width: 8em; height: 8em;"></li>
 							<li><img src="images/mysql.png" style = "width: 8em; height: 8em;"></li>
 						</ul>
