--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 							
 						</header>
 						<ul class="major-icons">
-							<li><img src="images/java.png" style = "width: 8em; height: 8em;"></li>
+							<li><img src="images/python_logo.png" style = "width: 8em; height: 8em;"></li>
 							<li><img src="images/nodejs.png" style = "width: 8em; height: 8em;"></li>
 							<li><img src="images/C.png" style = "width: 8em; height: 8em;"></li>
 							<!-- <li><img src="images/mysql.jpg" style = "width: 8em; height: 8em;"></li> -->
@@ -76,6 +76,7 @@
 						<ul class="major-icons">
 							<li><img src="images/html_css_js.png" style = "width: 8em; height: 8em;"></li>
 							<li><img src="images/mysql.png" style = "width: 8em; height: 8em;"></li>
+							<li><img src="images/java.png" style = "width: 8em; height: 8em;"></li>
 						</ul>
 					
 						<!-- <div class="col-6 col-12-medium">
