--- a/index.html
+++ b/index.html
@@ -137,12 +137,12 @@
 							<p class="pj_detail">첫 프로젝트로 
 								학생들이 학과별 게시판,자유게시판을 통하여 소통을 
 								하고 학교소식 또한 쉽게 들을수 있도록 만든 교내전용 SNS
-
-								 
 							</p>
+							
 							<h5>환경: Node.js,Express framework, Mysql</h5>
 							<ul class="actions special">
 								<li><a href="https://github.com/choi-wonseok/pork_cutlet/tree/main/pork1" target="_blank" rel="noopener noreferrer" class="button" >Github</a></li>
+								<li><a href="images/files/최원석_SNS.pptx" class="button" download>PPT</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -174,6 +174,7 @@
 							<h5>환경: MariaDB,Apach,PHP(Laravel),AWS,Android</h5>
 							<ul class="actions special">
 								<li><a href="https://github.com/choi-wonseok/dung/tree/master/dung" target="_blank" rel="noopener noreferrer" class="button">Github</a></li>
+								<li><a href="images/files/최원석_angel.pptx" class="button" download>PPT</a></li>
 							</ul>
 						</div>
 						<div class="col-4 col-12-medium">
@@ -209,7 +210,7 @@
 							<h5>환경: Python,Django,Mysql,Html</h5>
 							<ul class="actions special">
 								<li><a href="https://github.com/zzazan96/spaceship/tree/master/TitanicPj/TitanicApp" target="_blank" rel="noopener noreferrer" class="button">Github</a></li>
-								<li><a href="https://www.kaggle.com/competitions/spaceship-titanic" target="_blank" rel="noopener noreferrer" class="button">Kaggle</a></li>
+								<li><a href="images/files/최원석_Spaceship.pptx" class="button" download>PPT</a></li>
 							</ul>
 						</div>
 					</div>
