--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
 				</div>
 			</div>
 		</section>
-		<hr>
+		<section class="main style2 special" style="height:30px;">
+			<hr style="height:10px;border:none;color:#333;background-color:#333;">
+		</section>
 		
 
 		<!-- Three -->
