--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
 							생년: 1993년(만30세)<br>
 							학력: 한국평생진흥원 컴퓨터공학 학사학위 취득<br>
 							&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-							한국IT직업전문학교 융합스마트과 2년 중퇴<br>
-							경력사항: 신입(교내 프로젝트 외 활동 없음)<br>
+							한국IT직업전문학교 융합스마트과 2년<br>
+							경력사항: 신입(교내 팀 프로젝트)<br>
 							자격증: 네트워크관리사2급, 정보처리산업기사, 컴퓨터활용1급<br>
 							병역: 군필(현역 병장 제대)
 							</div>
